[gd_scene load_steps=6 format=3 uid="uid://bamnhsxnxcgfx"]

[ext_resource type="Script" uid="uid://bro1o8j3y20lc" path="res://shop_menu.gd" id="1_u8hot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi4xv"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.273873, 0.273873, 0.273873, 0.6)
shadow_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8hot"]
bg_color = Color(0.65008, 0.266814, 0.273688, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rh1mo"]
bg_color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68nve"]
bg_color = Color(0.146353, 0.326964, 0.489001, 1)

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8hot")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
theme_override_styles/panel = SubResource("StyleBoxFlat_bi4xv")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="MenuOptions" type="GridContainer" parent="Panel/MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 100
columns = 2

[node name="BuyBtn" type="Button" parent="Panel/MarginContainer/CenterContainer/MenuOptions"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "BUY"

[node name="SellBtn" type="Button" parent="Panel/MarginContainer/CenterContainer/MenuOptions"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "SELL"

[node name="BuyMenu" type="GridContainer" parent="Panel/MarginContainer/CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Item1" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 1"

[node name="Item2" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 2"

[node name="Item3" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 3"

[node name="Item4" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 4"

[node name="Item5" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 5"

[node name="Item6" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 6"

[node name="Item7" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 7"

[node name="Item8" type="Button" parent="Panel/MarginContainer/CenterContainer/BuyMenu"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_u8hot")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rh1mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_68nve")
text = "Item 8"

[node name="SellMenu" type="GridContainer" parent="Panel/MarginContainer/CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[connection signal="pressed" from="Panel/MarginContainer/CenterContainer/MenuOptions/BuyBtn" to="." method="pressedBuyBtn"]
[connection signal="pressed" from="Panel/MarginContainer/CenterContainer/MenuOptions/SellBtn" to="." method="pressedSellBtn"]
